Ver 7.1 (updated ai chat wrong icon)

--- a/AI Chat.html
+++ b/AI Chat.html
@@ -113,7 +113,7 @@
       <div class="kb-modal-content">
         <div class="kb-modal-header">
           <h2>Select Knowledge Bases</h2>
-          <button class="kb-modal-close" onclick="closeKnowledgeBaseModal()">×</button>
+          <button class="kb-modal-close" onclick="closeKnowledgeBaseModal()"><img src="assets/wrong-svgrepo-com.svg" alt="Close" width="10" /></button>
         </div>
         <div class="kb-modal-body">
           <p class="kb-modal-subtitle">Select which knowledge bases the AI should use for answering questions</p>
@@ -132,7 +132,7 @@
       <div class="kb-modal-content">
         <div class="kb-modal-header">
           <h2>Select Files from Knowledge Bases</h2>
-          <button class="kb-modal-close" onclick="closeFileSelectionModal()">×</button>
+          <button class="kb-modal-close" onclick="closeFileSelectionModal()"><img src="assets/wrong-svgrepo-com.svg" alt="Close" width="10" /></button>
         </div>
         <div class="kb-modal-body">
           <p class="kb-modal-subtitle">Select files from your knowledge bases to attach to the chat</p>
