Ver 7.3 (updated chart-card hover shadow)

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 
   <div class="chart-modal" id="chartModal">
     <div class="modal-content">
-      <button class="modal-close" id="modalClose"><img src="assets/close.png" alt="Close" width="15"></button>
+      <button class="modal-close" id="modalClose"><img src="assets/wrong-svgrepo-com.svg" alt="Close" width="15"></button>
       <h2 class="modal-chart-title" id="modalChartTitle"></h2>
       <div class="modal-chart-wrap" id="modalChartWrap"></div>
     </div>
