--- a/Knowledge_Bases_Details.html
+++ b/Knowledge_Bases_Details.html
@@ -29,13 +29,13 @@
         <img src="assets/chat-text-fill-svgrepo-com.svg" alt="AI Chat" width="30" />
         <span class="nav-text">AI Chat</span>
       </button>
-      <button class="nav-btn">
+      <button class="nav-btn" onclick="window.location.href='admin_page.html'">
         <img src="assets/setting-svgrepo-com.svg" alt="Configuration" width="30" />
-        <span class="nav-text">Configuration</span>
+        <span class="nav-text">Admin</span>
       </button>
-      <button class="nav-btn" onclick="window.location.href='#'">
+      <button class="nav-btn" onclick="window.location.href='https://apps.ricohsolution.com.hk:1443/Forms/Home/Reports#/reports/insights'">
         <img src="assets/article-story-report-piece-svgrepo-com.svg" alt="Report" width="30" />
-        <span class="nav-text">Report</span>
+        <span class="nav-text">Reports</span>
       </button>
     </nav>
     <button class="theme-toggle" id="themeToggle" onclick="toggleDarkMode()">
@@ -44,7 +44,7 @@
     </button>
     <div class="user-menu">
       <img src="assets/user-svgrepo-com.svg" alt="User Profile" width="30" />
-      <span class="nav-text">Profile</span>
+      <span class="nav-text">Hi, Charli</span>
     </div>
     <button class="nav-btn" onclick="window.location.href='#'">
       <img src="assets/logout-svgrepo-com.svg" alt="Logout" width="30" />
@@ -118,7 +118,7 @@
 
         <div class="kb-files-container">
           <div class="kb-files-header">
-            <h2>Document Search</h2>
+            <h2>Search</h2>
             <p class="kb-subtitle">Search across all documents and pages in this knowledge base</p>
           </div>
 
