Ver 7.8 (updated close button)

--- a/Knowledge_Bases.html
+++ b/Knowledge_Bases.html
@@ -149,7 +149,7 @@
     <div class="kb-modal-content kb-modal-small">
       <div class="kb-modal-header">
         <h2>Delete Knowledge Base</h2>
-        <button class="kb-modal-close" id="deleteModalClose">×</button>
+        <button class="kb-modal-close" id="deleteModalClose"><img src="assets/times-svgrepo-com.svg" width="16" height="16" alt="Close"></button>
       </div>
       <div class="kb-modal-body">
         <p>Are you sure you want to delete "<span id="deleteKbName"></span>"?</p>
