Ver 7.9 (updated href)

--- a/AI Chat.html
+++ b/AI Chat.html
@@ -72,9 +72,8 @@
                     privacy and acknowledge</strong> that your information will be reported for follow-up and
                   performance improvement. <a href="https://www.ricoh.com.hk/en/privacy-policy" target="_blank">Privacy
                     policy</a></p>
-                <p>當您開始使用Ricoh Hong Kong AI支援時，即表示您同意Ricoh的隱私權並承認您的資訊將被報告以供後續追蹤和效能改善。相關資訊記錄在隱私政策中。相關於隱私政策: <a
-                    href="https://www.ricoh.com.hk/privacy-policy"
-                    target="_blank">https://www.ricoh.com.hk/privacy-policy</a></p>
+                <p>當您開始使用Ricoh Hong Kong AI支援時，即表示您同意Ricoh的隱私權並承認您的資訊將被報告以供後續追蹤和效能改善。<br>相關資訊記錄在隱私政策中。
+                  <a href="https://www.ricoh.com.hk/privacy-policy" target="_blank">https://www.ricoh.com.hk/privacy-policy</a></p>
                 <div class="message-actions">
                   <button class="btn-accept" onclick="acceptPolicy()">Accept</button>
                   <button class="btn-reject" onclick="rejectPolicy()">Reject</button>
