--- a/Knowledge_Bases.html
+++ b/Knowledge_Bases.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Knowledge Bases - Ricoh AI</title>
   <link rel="stylesheet" href="./styles.css" />
-  <link rel="stylesheet" href="./knowledge-bases.css" />
+  <link rel="stylesheet" href="./Knowledge-Bases.css" />
   <link rel="stylesheet" href="./dark-mode.css" />
 </head>
 
@@ -207,7 +207,7 @@
     </div>
   </div>
 
-  <script src="./knowledge-bases.js"></script>
+  <script src="./Knowledge-Bases.js"></script>
 </body>
 
 </html>
