--- a/Knowledge_Bases_Details.html
+++ b/Knowledge_Bases_Details.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Knowledge Bases - Ricoh AI</title>
   <link rel="stylesheet" href="./styles.css" />
-  <link rel="stylesheet" href="./knowledge-bases.css" />
-  <link rel="stylesheet" href="./knowledge-bases-details.css" />
+  <link rel="stylesheet" href="./Knowledge-Bases.css" />
+  <link rel="stylesheet" href="./Knowledge-Bases-Details.css" />
   <link rel="stylesheet" href="./dark-mode.css" />
 </head>
 
@@ -137,7 +137,7 @@
     </main>
   </div>
 
-  <script src="./knowledge-bases-details.js"></script>
+  <script src="./Knowledge-Bases-Details.js"></script>
 </body>
 
 </html>
