Ver 8.0 (updated add, edit, remove process)

--- a/Knowledge_Bases_Details.html
+++ b/Knowledge_Bases_Details.html
@@ -25,12 +25,12 @@
         <img src="assets/literature-book-knowledge-library-svgrepo-com.svg" alt="Knowledge Bases" width="30" />
         <span class="nav-text">Knowledge Bases</span>
       </button>
-      <button class="nav-btn" onclick="window.location.href='AI Chat.html'">
+      <button class="nav-btn" onclick="window.location.href='ai-chat.html'">
         <img src="assets/chat-text-fill-svgrepo-com.svg" alt="AI Chat" width="30" />
         <span class="nav-text">AI Chat</span>
       </button>
-      <button class="nav-btn" onclick="window.location.href='admin_page.html'">
-        <img src="assets/setting-svgrepo-com.svg" alt="Configuration" width="30" />
+      <button class="nav-btn" onclick="window.location.href='admin.html'">
+        <img src="assets/icon-admin.svg" alt="Configuration" width="30" />
         <span class="nav-text">Admin</span>
       </button>
       <button class="nav-btn" onclick="window.location.href='https://apps.ricohsolution.com.hk:1443/Forms/Home/Reports#/reports/insights'">
@@ -43,7 +43,7 @@
       <span class="nav-text">Toggle Theme</span>
     </button>
     <div class="user-menu">
-      <img src="assets/user-svgrepo-com.svg" alt="User Profile" width="30" />
+      <img src="assets/user-128.svg" alt="User Profile" width="30" />
       <span class="nav-text">Hi, Charli</span>
     </div>
     <button class="nav-btn" onclick="window.location.href='#'">
